--- a/views/response.erb
+++ b/views/response.erb
@@ -3,8 +3,8 @@
 	<title>Hangman</title>
 </head>
 <body>
-	<div style="height: 50px;text-align: center;margin-top: 150px"> <%= @hangman_layout %> </div>
-	<p style="width:200px;margin-left:auto;margin-right:auto">Ammount of tries left: 15 <%= @secret_word %></p>
+	<div style="height: 50px;text-align: center;margin-top: 150px"> <%= @hangman_layout.inspect %> </div>
+	<p style="width:200px;margin-left:auto;margin-right:auto">Ammount of tries left: <%= @guesses_left %> </p>
 
 	<p style="width:200px;margin-left:auto;margin-right:auto">Your guesses:</p>
 		
@@ -13,4 +13,7 @@
 		<input type='submit' value='submit' />
 	</form>
 </body>
+
+	Here was you guess: <%= @guess %>
+	<p> All of your guesses: <%= @guesses %> </p>
 </html>
