I3: completed victory condition and guess checker

--- a/views/welcome.erb
+++ b/views/welcome.erb
@@ -3,8 +3,8 @@
 	<title>Hangman</title>
 </head>
 <body>
-	<div style="height: 50px;text-align: center;margin-top: 150px"> <%= @hangman_layout %> </div>
-	<p style="width:200px;margin-left:auto;margin-right:auto">Ammount of tries left: 15 <%= @secret_word %></p>
+	<div style="height: 50px;text-align: center;margin-top: 150px"> <%= @hangman_layout %> <%= @secret_word %> </div>
+	<p style="width:200px;margin-left:auto;margin-right:auto">Ammount of tries left: 15 </p>
 
 	<p style="width:200px;margin-left:auto;margin-right:auto">Your guesses:</p>
 		
