--- a/views/welcome.erb
+++ b/views/welcome.erb
@@ -3,7 +3,7 @@
 	<title>Hangman</title>
 </head>
 <body>
-	<div style="height: 50px;text-align: center;margin-top: 150px"> <%= @hangman_layout %> <%= @secret_word %> </div>
+	<div style="height: 50px;text-align: center;margin-top: 150px"> <h1><%= @hangman_layout.join(" ") %> </h1> </div>
 	<p style="width:200px;margin-left:auto;margin-right:auto">Ammount of tries left: 15 </p>
 
 	<p style="width:200px;margin-left:auto;margin-right:auto">Your guesses:</p>
@@ -11,6 +11,12 @@
 	<form action='/guess_response' method='POST' style="width:500px;margin-left:auto;margin-right:auto;text-align:center">
 		<input type='text' name='guess' />
 		<input type='submit' value='submit' />
+	</form>
+
+
+	
+	<form action='/' method='GET' style="text-align:center;margin-top:160px;">
+		<input type='submit' value='New Word' style="color:red;font-size:20px" />
 	</form>
 </body>
 </html>
